--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -13,7 +13,7 @@ name: OpenWrt-CI
 on:
   push:
     branches: 
-      - master
+      - openwrt-21.02
   # schedule:
   #   - cron: 0 20 * * *
   release:
